# Ultrasound-Pen-Tracker

./: CMakeLists.txt  README.md  commands.h  eeprom.h  i2c0_lcd.c  main.c  strings.c  tm4c123gh6pm_startup_ccs.c
Debug/: Lab8-Pen_linkInfo.xml  ccsObjs.opt  makefile  subdir_rules.mk  subdir_vars.mk
app/: CMakeLists.txt  upats.c
board/: CMakeLists.txt
board/include/: clock.h  i2c.h  wait.h
board/src/: clock.c  gpio.c  i2c.c  timer.c  wait.c
bsplib/include/: clock.h  gpio.h  timer.h
bsplib/src/: clock.c  gpio.c  i2c.c  timer.c  uart.c
psplib/: CMakeLists.txt
psplib/include/: strings.h
psplib/src/: commands.c  lcd.c  strings.c
utils/: CMakeLists.txt
utils/include/: eeprom_memory_map.h  strings.h
utils/src/: eeprom.c  lcd.c
